# transcriptase-rs

./: .gitignore  Cargo.toml
examples/: fasta.rs  fastq.rs  gff.rs
proptest-regressions/gff/: test.txt
src/: cli.rs  err.rs  error.rs  fasta.rs  fastq.rs  formats.rs  genomics.rs  gff.rs  lib.rs  main.rs  proteomics.rs  test.fasta  util.rs
src/fasta/: parsers.rs
src/fastq/: quality.rs
src/genomics/: codon.rs  compress.rs  genome.rs  mod.rs  nucleotide.rs
src/gff/: attr.rs  meta.rs  parsers.rs  test.rs
src/proteomics/: amino.rs
src/proteomics/amino/: translation.rs
