[package]
authors = ["Alyssa <alyssarosedev@protonmail.com>"]
edition = "2021"
name = "transcriptase"
version = "0.1.0"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
either = "1.6.1"
memchr = "2.5.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
phf = { version = "0.10.1", features = ["macros"] }
rayon = {version = "1.5.3", optional = true }
thiserror = "1.0.31"
tracing = "0.1.34"

[profile.release]
debug = 1
